Fixes build command issue

--- a/.goreleaser-amd64.yaml
+++ b/.goreleaser-amd64.yaml
@@ -9,7 +9,7 @@ before:
         # Format code
         - go fmt ./...
         # Build kb-builder for generating kb.db
-        - CGO_ENABLED=1 go build -o pgedge-nla-kb-builder ./cmd/kb-builder
+        - sh -c 'CGO_ENABLED=1 go build -o pgedge-nla-kb-builder ./cmd/kb-builder'
         # Generate kb.db using Ollama Cloud (requires OLLAMA_API_KEY env var)
         - ./pgedge-nla-kb-builder --config examples/pgedge-nla-kb-builder-build.yaml
 
