--- a/.goreleaser-amd64.yaml
+++ b/.goreleaser-amd64.yaml
@@ -17,8 +17,8 @@ before:
 
 builds:
     # MCP Server - amd64 (all platforms)
-    - id: pgedge-mcp-server-amd64
-      binary: pgedge-mcp-server
+    - id: pgedge-postgres-mcp-amd64
+      binary: pgedge-postgres-mcp
       main: ./cmd/pgedge-pg-mcp-svr
       env:
           - CGO_ENABLED=0
@@ -77,7 +77,7 @@ archives:
     # Server archive - amd64 only
     - id: server-amd64
       builds:
-          - pgedge-mcp-server-amd64
+          - pgedge-postgres-mcp-amd64
       name_template: >-
           {{ .ProjectName }}-server_
           {{- .Version }}_
@@ -89,7 +89,7 @@ archives:
           - README.md
           - LICENCE.md
           - docs/**/*
-          - examples/pgedge-mcp-server-custom.yaml
+          - examples/pgedge-postgres-mcp-custom.yaml
           - examples/.env.example
 
     # CLI archive - amd64 only
