--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile.server
-        container_name: pgedge-mcp-server
+        container_name: pgedge-postgres-mcp
         ports:
             - "${MCP_SERVER_PORT:-8080}:8080"
         environment:
@@ -49,7 +49,7 @@ services:
             - pgedge-network
         restart: unless-stopped
         healthcheck:
-            test: ["CMD", "/bin/sh", "-c", "test -f /app/pgedge-mcp-server"]
+            test: ["CMD", "/bin/sh", "-c", "test -f /app/pgedge-postgres-mcp"]
             interval: 10s
             timeout: 5s
             retries: 3
