--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,21 +62,20 @@ nav:
       - pgEdge Postgres MCP Server: index.md
       - Choosing the Right Solution: guide/mcp-vs-rag.md
   - Installing the MCP Server:
-      - Deploying on Docker: deploy_docker.md
-      - Deploying from Source: deploy_source.md
-      - Configuring HTTP/HTTPS: guide/http_server.md
-      - Configuring for systemd Management: guide/systemd_config.md
+      - Deploying on Docker: guide/deploy_docker.md
+      - Deploying from Source: guide/deploy_source.md
   - Configuring the MCP Server:
       - Specifying Configuration Preferences: guide/configuration.md
       - Using Environment Variables to Specify Options: guide/env_variable_config.md
       - Including Provider Embeddings in a Configuration File: guide/provider_config.md
-      - Configuring the Server for use with Claude Desktop: guide/claude_desktop.md
       - Configuring the Agent for Multiple Databases: guide/multiple_db_config.md
+      - Configuring Supporting Services; HTTP, systemd, and nginx: guide/services_config.md
       - Using an Encryption Secret File: guide/encryption_secret.md
       - Enabling or Disabling Features: guide/feature_config.md
   - Selecting and Using a Client Application:
       - Connecting with the Web Client: guide/web-client.md
       - CLI Client: guide/cli-client.md
+      - Configuring the Server for use with Claude Desktop: guide/claude_desktop.md
       - Authentication: guide/authentication.md
       - Security: guide/security.md
   - Reference:
