--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,11 +72,14 @@ nav:
       - Configuring Supporting Services; HTTP, systemd, and nginx: guide/services_config.md
       - Using an Encryption Secret File: guide/encryption_secret.md
       - Enabling or Disabling Features: guide/feature_config.md
-  - Selecting and Using a Client Application:
+  - Configuring and Using a Client Application:
       - Connecting with the Web Client: guide/web-client.md
       - Using the Go Chat Client: guide/cli-client.md
       - Configuring the Server for use with Claude Desktop: guide/claude_desktop.md
-      - Authentication: guide/authentication.md
+  - Authentication and Security:
+      - Authentication:
+          - Authentication - Configuring Lockout: guide/authentication.md
+          - Authentication - User Management: guide/user_auth.md
       - Security: guide/security.md
   - Reference:
       - Tools: reference/tools.md
