Fix artifact name to remove invalid colon character
Replace ':' with '-' in artifact names to comply with GitHub Actions
artifact naming requirements (e.g., ubuntu:24.04 -> ubuntu-24.04)

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -115,7 +115,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results-${{ matrix.os_image }}
+          name: test-results-${{ replace(matrix.os_image, ':', '-') }}
           path: |
             test/regression/test-output.log
           retention-days: 30
