Fix artifact name sanitization using shell script
Use sed in a separate step to sanitize OS image names for artifacts.
This properly converts colons to hyphens (e.g., ubuntu:24.04 -> ubuntu-24.04)
to comply with GitHub Actions artifact naming requirements.

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -97,6 +97,13 @@ jobs:
           echo "Test configuration:"
           cat .test.env
 
+      - name: Set artifact name
+        id: artifact
+        run: |
+          # Sanitize OS image name for artifact (replace : with -)
+          SANITIZED_NAME=$(echo "${{ matrix.os_image }}" | sed 's/:/-/g')
+          echo "name=test-results-${SANITIZED_NAME}" >> $GITHUB_OUTPUT
+
       - name: Run regression tests
         working-directory: test/regression
         env:
@@ -115,7 +122,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results-${{ replace(matrix.os_image, ':', '-') }}
+          name: ${{ steps.artifact.outputs.name }}
           path: |
             test/regression/test-output.log
           retention-days: 30
