Fix Rocky Linux Docker image name in workflow
Changed from 'rocky:9' to 'rockylinux/rockylinux:9' to use the correct
official Rocky Linux image name.

--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -17,7 +17,7 @@ on:
           - debian:12
           - ubuntu:24.04
           - almalinux:9
-          - rocky:9
+          - rockylinux/rockylinux:9
       server_env:
         description: 'Server environment'
         required: false
