Make more++ fixes for the local mode

--- a/AItoolsFramework/mcp-server/config/local.yaml
+++ b/AItoolsFramework/mcp-server/config/local.yaml
@@ -67,7 +67,7 @@ database:
 
 # Logging configuration
 logging:
-  level: detailed  # minimal, detailed, verbose
+  level: minimal  # minimal, detailed, verbose
   log_commands: true
   log_output: false
 
