Fix local mode test execution: skip sudo check, add test cleanup, improve logging

--- a/AItoolsFramework/mcp-server/Makefile
+++ b/AItoolsFramework/mcp-server/Makefile
@@ -13,13 +13,7 @@ test:
 	@mkdir -p test-results
 	@go clean -cache -testcache
 	@touch testcases/*.go
-	@if grep -q "log_level.*minimal" $(CONFIG_FILE); then \
-		echo "Using minimal logging mode..."; \
-		TESTFW_CONFIG=$(MAKEFILE_DIR)/$(CONFIG_FILE) go test -count=1 -timeout 30m ./testcases 2>&1 | tee $(LOG_FILE); \
-	else \
-		echo "Using detailed logging mode..."; \
-		TESTFW_CONFIG=$(MAKEFILE_DIR)/$(CONFIG_FILE) go test -v -count=1 -timeout 30m ./testcases 2>&1 | tee $(LOG_FILE); \
-	fi
+	TESTFW_CONFIG=$(MAKEFILE_DIR)/$(CONFIG_FILE) go test -v -count=1 -timeout 30m ./testcases 2>&1 | tee $(LOG_FILE)
 
 test-verbose:
 	@echo "Running MCP Server tests (verbose) with $(CONFIG_FILE)..."
